# algRAT

./: README.md
practice1/: main.py  solution.cpp  solution.py  solution_test.py  test_solution_.py
practice2/: CMakeLists.txt  main.py  solution.cpp  solution.h  solution.py  test_solution.cpp  test_solution.py
practice3/: UnitTest1.cpp  benchmark.cpp  sorting.cpp  sorting.h
practice4/: solution.cpp
report/: .~lock.Малов. Практика №2 ДЗ.docx#  .~lock.Малов. Практика №3 ДЗ.docx#  .~lock.Малов. Практика №4 ДЗ.docx#  ~$лов. Практика №2 ДЗ.docx  Малов. Практика №1 ДЗ.docx  Малов. Практика №2 ДЗ.docx  Малов. Практика №3 ДЗ.docx  Малов. Практика №4 ДЗ.docx
